adding updated scripts to devel.html

--- a/devel.html
+++ b/devel.html
@@ -17,7 +17,73 @@
 		localStorage.clear();
 	</script>
 
-	<script data-main="js/Main" src="vendor/require.js"></script>
+	<!-- Vendor Scripts -->
+	<script src="vendor/jquery.js"></script>
+	<script src="vendor/underscore.js"></script>
+	<script src="vendor/backbone.js"></script>
+	<script src="vendor/backbone-super.js"></script>
+	<script src="vendor/backbone.localstorage.js"></script>
+	<script src="vendor/json2.js"></script>
+	<script src="vendor/klass.js"></script>
+	<script src="vendor/jqmobile/jquery.mobile.js"></script>
+	<script src="vendor/leaflet/leaflet-src.js"></script>
+	<script src="vendor/mediaelement/mediaelement-and-player.js"></script>
+	<script src="vendor/photoswipe/code.photoswipe.jquery.js"></script>
+
+	<!-- TAP Scripts -->
+	<script src="js/tap/TapAPI.js"></script>
+	<script src="js/tap/Helper.js"></script>
+	<script src="js/tap/Router.js"></script>
+	<script src="js/tap/TemplateManager.js"></script>
+	<script src="js/tap/JQMConfig.js"></script>
+	<script src="js/tap/AnalyticsTimer.js"></script>
+	<script src="js/tap/GeoLocation.js"></script>
+
+	<!-- TAP Models -->
+	<script src="js/tap/models/TourModel.js"></script>
+	<script src="js/tap/models/StopModel.js"></script>
+	<script src="js/tap/models/AssetModel.js"></script>
+	<script src="js/tap/models/PropertyModel.js"></script>
+	<script src="js/tap/models/SourceModel.js"></script>
+	<script src="js/tap/models/ContentModel.js"></script>
+
+	<!-- TAP Collections -->
+	<script src="js/tap/collections/TourCollection.js"></script>
+	<script src="js/tap/collecitons/StopCollection.js"></script>
+	<script src="js/tap/collections/AssetColleciton.js"></script>
+	<script src="js/tap/collections/PropertyCollection.js"></script>
+	<script src="js/tap/collecitons/SourceCollection.js"></script>
+	<script src="js/tap/collections/ContentCollection.js"></script>
+
+	<!-- TAP Views -->
+	<script src="js/tap/views/BaseView.js"></script>
+	<script src="js/tap/views/StopSelectionViews.js"></script>
+	<script src="js/tap/views/AppView.js"></script>
+	<script src="js/tap/views/AudioStopView.js"></script>
+	<script src="js/tap/views/ContentView.js"></script>
+	<script src="js/tap/views/FooterView.js"></script>
+	<script src="js/tap/views/HeaderView.js"></script>
+	<script src="js/tap/views/ImageStopView.js"></script>
+	<script src="js/tap/views/KeypadView.js"></script>
+	<script src="js/tap/views/MapView.js"></script>
+	<script src="js/tap/views/PopupView.js"></script>
+	<script src="js/tap/views/SocialPopupView.js"></script>
+	<script src="js/tap/views/StopGroupView.js"></script>
+	<script src="js/tap/views/StopListView.js"></script>
+	<script src="js/tap/views/TourDetailsView.js"></script>
+	<script src="js/tap/views/TourListView.js"></script>
+	<script src="js/tap/views/VideoStopView.js"></script>
+	<script src="js/tap/views/WebView.js"></script>
+
+	<!-- TAP Config -->
+	<script src="js/Config.js"></script>
+
+	<script>
+		$(function(){
+			var app = new TapAPI.classes.views.appView();
+			app.runApp();
+		})
+	</script>
 </head>
 <body>
 </body>
