All scripts are now loaded and referenced properly

--- a/devel.html
+++ b/devel.html
@@ -30,6 +30,9 @@
 	<script src="vendor/mediaelement/mediaelement-and-player.js"></script>
 	<script src="vendor/photoswipe/code.photoswipe.jquery.js"></script>
 
+	<!-- TAP Configuration -->
+	<script src="Config.js"></script>
+
 	<!-- TAP Scripts -->
 	<script src="js/tap/TapAPI.js"></script>
 	<script src="js/tap/Helper.js"></script>
@@ -49,15 +52,15 @@
 
 	<!-- TAP Collections -->
 	<script src="js/tap/collections/TourCollection.js"></script>
-	<script src="js/tap/collecitons/StopCollection.js"></script>
-	<script src="js/tap/collections/AssetColleciton.js"></script>
-	<script src="js/tap/collections/PropertyCollection.js"></script>
-	<script src="js/tap/collecitons/SourceCollection.js"></script>
+	<script src="js/tap/collections/StopCollection.js"></script>
+	<script src="js/tap/collections/AssetCollection.js"></script>
+	<script src="js/tap/collections/PropertySetCollection.js"></script>
+	<script src="js/tap/collections/SourceCollection.js"></script>
 	<script src="js/tap/collections/ContentCollection.js"></script>
 
 	<!-- TAP Views -->
 	<script src="js/tap/views/BaseView.js"></script>
-	<script src="js/tap/views/StopSelectionViews.js"></script>
+	<script src="js/tap/views/StopSelectionView.js"></script>
 	<script src="js/tap/views/AppView.js"></script>
 	<script src="js/tap/views/AudioStopView.js"></script>
 	<script src="js/tap/views/ContentView.js"></script>
@@ -74,9 +77,6 @@
 	<script src="js/tap/views/TourListView.js"></script>
 	<script src="js/tap/views/VideoStopView.js"></script>
 	<script src="js/tap/views/WebView.js"></script>
-
-	<!-- TAP Config -->
-	<script src="js/Config.js"></script>
 
 	<script>
 		$(function(){
