More namespace updates… almost there

--- a/devel.html
+++ b/devel.html
@@ -80,7 +80,7 @@
 
 	<script>
 		$(function(){
-			var app = new TapAPI.classes.views.appView();
+			var app = new TapAPI.classes.views.AppView();
 			app.runApp();
 		})
 	</script>
