More Refactoring, but I think were working now

--- a/devel.html
+++ b/devel.html
@@ -25,6 +25,8 @@
 	<script src="vendor/backbone.localstorage.js"></script>
 	<script src="vendor/json2.js"></script>
 	<script src="vendor/klass.js"></script>
+	<!-- jQuery Mobile Config has to preceed jQuery Mobile -->
+	<script src="js/tap/JQMConfig.js"></script>
 	<script src="vendor/jqmobile/jquery.mobile.js"></script>
 	<script src="vendor/leaflet/leaflet-src.js"></script>
 	<script src="vendor/mediaelement/mediaelement-and-player.js"></script>
@@ -38,7 +40,6 @@
 	<script src="js/tap/Helper.js"></script>
 	<script src="js/tap/Router.js"></script>
 	<script src="js/tap/TemplateManager.js"></script>
-	<script src="js/tap/JQMConfig.js"></script>
 	<script src="js/tap/AnalyticsTimer.js"></script>
 	<script src="js/tap/GeoLocation.js"></script>
 
