Move TourML parsing out of TourCollection and into separate file… first step towards web workers

--- a/devel.html
+++ b/devel.html
@@ -40,6 +40,7 @@
 	<script src="js/tap/Helper.js"></script>
 	<script src="js/tap/Router.js"></script>
 	<script src="js/tap/TemplateManager.js"></script>
+	<script src="js/tap/TourMLParser.js"></script>
 	<script src="js/tap/AnalyticsTimer.js"></script>
 	<script src="js/tap/GeoLocation.js"></script>
 
