--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
     <link rel="stylesheet" href="vendor/leaflet/leaflet.css" />
     <link rel="stylesheet" href="vendor/photoswipe/photoswipe.css" />
     <link rel="stylesheet" href="vendor/mediaelement/mediaelementplayer.css" />
-    <link rel="stylesheet" href="dist/css/Tap-1.0.0.min.css" />
+    <link rel="stylesheet" href="dist/css/Tap-1.1.0.min.css" />
 
-    <script data-main="dist/js/Main" src="vendor/require.js"></script>
+    <script src="dist/Config.js"></script>
+    <script src="dist/js/Tap-Web-App-1.1.0-with-dependencies.js"></script>
+    <script>
+        $(function(){
+            var app = new TapAPI.classes.views.AppView();
+            app.runApp();
+        })
+    </script>
 </head>
 <body>
 </body>
