updated web stop & video

--- a/devel.html
+++ b/devel.html
@@ -75,7 +75,7 @@
 	<script src="js/tap/views/TourDetailsView.js"></script>
 	<script src="js/tap/views/TourListView.js"></script>
 	<script src="js/tap/views/VideoStopView.js"></script>
-	<script src="js/tap/views/WebView.js"></script>
+	<script src="js/tap/views/WebStopView.js"></script>
 
 	<!-- jQuery Mobile Config has to preceed jQuery Mobile -->
 	<script src="js/tap/JQMConfig.js"></script>
