Completely refactored analytics with more events and model based with configuration for other analytics providers

--- a/devel.html
+++ b/devel.html
@@ -38,7 +38,6 @@
 	<script src="js/tap/Router.js"></script>
 	<script src="js/tap/TemplateManager.js"></script>
 	<script src="js/tap/TourMLParser.js"></script>
-	<script src="js/tap/AnalyticsTimer.js"></script>
 	<script src="js/tap/GeoLocation.js"></script>
 
 	<!-- TAP Models -->
@@ -48,6 +47,9 @@
 	<script src="js/tap/models/PropertyModel.js"></script>
 	<script src="js/tap/models/SourceModel.js"></script>
 	<script src="js/tap/models/ContentModel.js"></script>
+	<!-- TAP Analytics -->
+	<script src="js/tap/models/BaseAnalyticsModel.js"></script>
+	<script src="js/tap/models/GAModel.js"></script>
 
 	<!-- TAP Collections -->
 	<script src="js/tap/collections/TourCollection.js"></script>
