--- a/devel.html
+++ b/devel.html
@@ -22,7 +22,7 @@
 	<script src="vendor/underscore.js"></script>
 	<script src="vendor/backbone.js"></script>
 	<script src="vendor/backbone-super.js"></script>
-	<script src="vendor/backbone.localstorage.js"></script>
+	<script src="vendor/backbone.localStorage.js"></script>
 	<script src="vendor/json2.js"></script>
 	<script src="vendor/klass.js"></script>
 	<script src="vendor/leaflet/leaflet-src.js"></script>
