--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="dist/css/Tap-1.1.0.min.css" />
 
     <script src="dist/Config.js"></script>
-    <script src="dist/js/Tap-Web-App-1.1.0-with-dependencies.js"></script>
+    <script src="dist/js/TAP-Web-App-1.1.0-with-dependencies.js"></script>
     <script>
         $(function(){
             var app = new TapAPI.classes.views.AppView();
