--- a/devel.html
+++ b/devel.html
@@ -78,6 +78,7 @@
 	<script src="js/tap/views/TourListView.js"></script>
 	<script src="js/tap/views/VideoStopView.js"></script>
 	<script src="js/tap/views/WebStopView.js"></script>
+	<script src="js/tap/views/AudioSlideshowStopView.js"></script>
 
 	<!-- jQuery Mobile Config has to preceed jQuery Mobile -->
 	<script src="js/tap/JQMConfig.js"></script>
