slider in stop group, and audio

--- a/devel.html
+++ b/devel.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/mw14.css" />
 	<link rel="stylesheet" href="vendor/leaflet/leaflet.css" />
 	<link rel="stylesheet" href="vendor/photoswipe/photoswipe.css" />
+	<link rel="stylesheet" href="vendor/responsiveSlides/responsiveSlides.css" />
 	<link rel="stylesheet" href="vendor/mediaelement/mediaelementplayer.css" />
 	<link rel="stylesheet" href="css/main.css" />
 
@@ -28,6 +29,8 @@
 	<script src="vendor/klass.js"></script>
 	<script src="vendor/leaflet/leaflet-src.js"></script>
 	<script src="vendor/mediaelement/mediaelement-and-player.js"></script>
+	<script src="vendor/responsiveSlides/responsiveSlides.js"></script>
+	<script src="vendor/jquery.slides.js"></script>
 	<script src="vendor/photoswipe/code.photoswipe.jquery.js"></script>
 
 	<!-- TAP Configuration -->
