--- a/devel.html
+++ b/devel.html
@@ -29,11 +29,13 @@
 	<script src="vendor/backbone.localStorage.js"></script>
 	<script src="vendor/json2.js"></script>
 	<script src="vendor/klass.js"></script>
+	<!-- <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script> -->
 	<script src="vendor/leaflet/leaflet-src.js"></script>
 	<script src="vendor/mediaelement/mediaelement-and-player.js"></script>
 	<script src="vendor/responsiveSlides/responsiveSlides.js"></script>
 	<script src="vendor/photoswipe/code.photoswipe.jquery.js"></script>
 	<script src="vendor/customAudio/customAudio.js"></script>
+	<script src="vendor/L.TileLayer.Zoomify.js"></script>
 
 	<!-- TAP Configuration -->
 	<script src="Config.js"></script>
