image zooming stop

--- a/devel.html
+++ b/devel.html
@@ -79,6 +79,7 @@
 	<script src="js/tap/views/VideoStopView.js"></script>
 	<script src="js/tap/views/WebStopView.js"></script>
 	<script src="js/tap/views/AudioSlideshowStopView.js"></script>
+	<script src="js/tap/views/ZoomingImageStopView.js"></script>
 
 	<!-- jQuery Mobile Config has to preceed jQuery Mobile -->
 	<script src="js/tap/JQMConfig.js"></script>
