Adding Quiz stop

--- a/devel.html
+++ b/devel.html
@@ -78,6 +78,7 @@
 	<script src="js/tap/views/TourListView.js"></script>
 	<script src="js/tap/views/VideoStopView.js"></script>
 	<script src="js/tap/views/WebStopView.js"></script>
+	<script src="js/tap/views/QuizStopView.js"></script>
 	<script src="js/tap/views/AudioSlideshowStopView.js"></script>
 	<script src="js/tap/views/ZoomingImageStopView.js"></script>
 
