Updates to audio slideshow

--- a/devel.html
+++ b/devel.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="vendor/jqmobile/jquery.mobile.css" />
 	<link rel="stylesheet" href="vendor/leaflet/leaflet.css" />
 	<link rel="stylesheet" href="vendor/photoswipe/photoswipe.css" />
+	<link rel="stylesheet" href="vendor/responsiveSlides/responsiveSlides.css" />
 	<link rel="stylesheet" href="vendor/mediaelement/mediaelementplayer.css" />
 	<link rel="stylesheet" href="css/main.css" />
 
@@ -27,7 +28,9 @@
 	<script src="vendor/klass.js"></script>
 	<script src="vendor/leaflet/leaflet-src.js"></script>
 	<script src="vendor/mediaelement/mediaelement-and-player.js"></script>
+	<script src="vendor/responsiveSlides/responsiveSlides.js"></script>
 	<script src="vendor/photoswipe/code.photoswipe.jquery.js"></script>
+	<script src="vendor/customAudio/customAudio.js"></script>
 
 	<!-- TAP Configuration -->
 	<script src="Config.js"></script>
