Add LoaderView to devel

--- a/devel.html
+++ b/devel.html
@@ -74,6 +74,7 @@
 	<script src="js/tap/views/KeypadView.js"></script>
 	<script src="js/tap/views/MapView.js"></script>
 	<script src="js/tap/views/PopupView.js"></script>
+	<script src="js/tap/views/LoaderView.js"></script>
 	<script src="js/tap/views/SocialPopupView.js"></script>
 	<script src="js/tap/views/StopGroupView.js"></script>
 	<script src="js/tap/views/StopListView.js"></script>
